fix dockerfile add from python 3.10

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu:22.04
+FROM python:3.10
 
 RUN apt-get update \  
-    && apt-get install -y software-properties-common python3-pip \ 
+    && apt-get install -y software-properties-common \ 
     && add-apt-repository ppa:opencpn/opencpn \ 
     && apt-get update \ 
     && apt-get install -y opencpn libgl1-mesa-glx libglib2.0-0 \ 
