--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,6 @@
 FROM python:3.10
 
-RUN apt-get update \  
-    && apt-get install -y software-properties-common \ 
-    && add-apt-repository ppa:opencpn/opencpn \ 
-    && apt-get update \ 
-    && apt-get install -y opencpn libgl1-mesa-glx libglib2.0-0 \ 
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
 
 WORKDIR /app
 
