--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10
 
-RUN sed -i 's#http://deb.debian.org/#http://ftp.ru.debian.org/#' /etc/apt/sources.list;
+RUN sed -i 's#http://deb.debian.org/#http://ftp.ru.debian.org/#' /etc/apt/sources.list
 RUN apt-get update --fix-missing && apt-get install -y vim --fix-missing
 
 RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
