--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,7 +10,8 @@ WORKDIR /app
 COPY ./app /app/app
 COPY requirements.txt /app/
 
-RUN pip install -r requirements.txt
+RUN python -m pip install --upgrade pip
+RUN pip install -r --default-timeout=100 requirements.txt 
 
 EXPOSE 8000
 
