--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY ./app /app/app
 COPY requirements.txt /app/
 
-RUN netsh interface ipv6 set prefixpolicy ::ffff:0:0/96 46 4
+RUN sysctl -w net.ipv6.conf.all.disable_ipv6=1
 
 RUN python -m pip install --upgrade pip
 RUN pip install --default-timeout=100 -r requirements.txt 
