add check pypi connect

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,9 @@ WORKDIR /app
 COPY ./app /app/app
 COPY requirements.txt /app/
 
+RUN apt-get install -y curl
+RUN curl -I https://pypi.org
+
 RUN python -m pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt --default-timeout=100 --index-url=https://pypi.tuna.tsinghua.edu.cn/simple 
 
