--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10
 RUN sed -i 's#http://deb.debian.org/#http://ftp.de.debian.org/#' /etc/apt/sources.list.d/debian.sources
 RUN apt-get update --fix-missing && apt-get install -y vim --fix-missing
 
-RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
+RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0 && apt-get install -y dnsutils
 
 WORKDIR /app
 
