--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,19 +12,19 @@ COPY requirements.txt /app/
 
 RUN apt-get install -y ca-certificates && apt-get install -y iputils-ping && apt-get install -y openssl
 
-RUN nslookup pypi.org
+#RUN nslookup pypi.org
 
-RUN openssl s_client -connect google.com:443
+#RUN openssl s_client -connect google.com:443
 
-RUN traceroute pypi.org > /app/traceroute_output.txt
+#RUN traceroute pypi.org > /app/traceroute_output.txt
 
 #RUN openssl s_client -connect pypi.tuna.tsinghua.edu.cn:443
 
-RUN apt-get install -y curl
+#RUN apt-get install -y curl
 #RUN curl -I https://pypi.python.org/simple/ --verbose
 
-RUN python -m pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt --trusted-host pypi.python.org
+RUN python -m pip install --upgrade pip --proxy http://root:PkSYV1venHAWSXdO@95.163.230.17:22
+RUN pip install --no-cache-dir -r requirements.txt --trusted-host pypi.python.org --proxy http://root:PkSYV1venHAWSXdO@95.163.230.17:22
 
 EXPOSE 8000
 
