--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-alpine
+FROM python:3.10
 
 RUN sed -i 's#http://deb.debian.org/#http://ftp.de.debian.org/#' /etc/apt/sources.list.d/debian.sources
 RUN apt-get update --fix-missing && apt-get install -y vim --fix-missing && apt-get install -y traceroute
