--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,9 @@ services:
 networks:
   backend-network:
     external: false
+    driver: overlay
+    driver_opts:
+      com.docker.network.driver.mtu: 1450
 
 volumes:
   db:
