--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -4,7 +4,7 @@ http {
     
     server {
         listen 80;
-        server_name sirshak.tech;
+        server_name fitit-ai.ru;
         return 301 https://$host$request_uri;
     }
 
@@ -12,8 +12,8 @@ http {
         listen 443 ssl;
         server_name sirshak.tech;
 
-        ssl_certificate /etc/letsencrypt/live/sirshak.tech/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/sirshak.tech/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/fitit-ai.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/fitit-ai.ru/privkey.pem;
 
         location / {
             proxy_pass http://app:8000;
