--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
 networks:
   backend-network:
     external: false
+    attachable: true
     driver: overlay
     driver_opts:
       com.docker.network.driver.mtu: 1450
