--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /app
 
 COPY ./app /app/app
 COPY requirements.txt /app/
+COPY ./script /app/
 
 RUN apt-get install -y ca-certificates && apt-get install -y iputils-ping && apt-get install -y openssl
 
@@ -20,4 +21,4 @@ EXPOSE 8000
 
 # the inner logic saves the active workout connection in RAM, so we need to run only one worker
 # since there arises a case when a connection is saved in `A` worker and the request is handled by `B` worker raising errors
-CMD ["scripts/wait-for-it.sh", "db:5432", "--", "gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "-w", "1"]
+CMD ["./scripts/wait-for-it.sh", "db:5432", "--", "gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "-w", "1"]
