--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
 
 networks:
   backend-network:
-    external: false
+    external: true
     attachable: true
     driver: bridge
     driver_opts:
