--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     networks:
       - backend-network
 
-  db:
+  postgresdb:
     image: postgres:15
     env_file: .env
     environment:
