--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./server/app:/app/app
     env_file: .env
     depends_on:
-      - db
+      - postgresdb
     networks:
       - backend-network
 
@@ -23,7 +23,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db:/var/lib/postgresql/data
+      - postgresdb:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -43,7 +43,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     depends_on:
-      - db
+      - postgresdb
     ports:
       - "5555:80"
     volumes:
@@ -66,7 +66,7 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     depends_on:
-      - db
+      - postgresdb
       - app
     networks:
       - backend-network
@@ -80,5 +80,5 @@ networks:
       com.docker.network.driver.mtu: 1450
 
 volumes:
-  db:
+  postgresdb:
   pgadmin:
