--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,21 @@ services:
     networks:
       - backend-network
 
+  pgadmin:
+    image: dpage/pgadmin4
+    depends_on:
+      - db
+    ports:
+      - "5555:80"
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+    restart: unless-stopped
+    networks:
+      - backend-network
+
   nginx:
     image: nginx:alpine
     ports:
