--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,19 +1,15 @@
 http {
     # access_log /dev/null;
     # error_log /dev/null;
-    
-    server {
-        listen 80;
-        server_name fitit-ai.ru;
-        return 301 https://$host$request_uri;
-    }
+
+
 
     server {
         listen 443 ssl;
-        server_name sirshak.tech;
+        server_name fitit-ai.ru;
 
-        ssl_certificate /etc/letsencrypt/live/fitit-ai.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/fitit-ai.ru/privkey.pem;
+        ssl_certificate /etc/ssl/fitit-ai.crt;
+        ssl_certificate_key /etc/ssl/fitit-ai.key;
 
         location / {
             proxy_pass http://app:8000;
