--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - "443:443"
     volumes:
       # The init.conf will be changed with ssl.conf once we have ssl
-      - ./nginx/init.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     depends_on:
