--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,9 +1,12 @@
 http {
     # access_log /dev/null;
     # error_log /dev/null;
+    server {
+        listen 80;
+        server_name fitit-ai.ru;
 
-
-
+        return 301 https://$host$request_uri;
+    }
     server {
         listen 443 ssl;
         server_name fitit-ai.ru;
