fix certificate path

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -10,9 +10,8 @@ http {
     server {
         listen 443 ssl;
         server_name fitit-ai.ru;
-        ssl on;
-        ssl_certificate /etc/ssl/fitit-ai.crt;
-        ssl_certificate_key /etc/ssl/fitit-ai.key;
+        ssl_certificate /etc/nginx/ssl/fitit-ai.crt;
+        ssl_certificate_key /etc/nginx/ssl/fitit-ai.key;
 
         location / {
             proxy_pass http://app:8000;
