fix certificate path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       # The init.conf will be changed with ssl.conf once we have ssl
       - ./nginx/ssl.conf:/etc/nginx/nginx.conf
       - ./nginx/certificate.key:/etc/nginx/ssl/fitit-ai.key
-      - ./nginx/certificate_ca.crt:/etc/nginx/ssl/fitit-ai.crt
+      - ./nginx/certificate.crt:/etc/nginx/ssl/fitit-ai.crt
     depends_on:
       - db
       - app
