--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,6 +1,8 @@
 http {
     # access_log /dev/null;
     # error_log /dev/null;
+    client_max_body_size 50M;
+
     server {
         listen 80;
         server_name fitit-ai.ru;
