--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -23,4 +23,4 @@ EXPOSE 8000
 
 # the inner logic saves the active workout connection in RAM, so we need to run only one worker
 # since there arises a case when a connection is saved in `A` worker and the request is handled by `B` worker raising errors
-CMD ["wait-for-it.sh", "db:5432", "--", "gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "-w", "1", "--reload"]
+CMgit sD ["wait-for-it.sh", "db:5432", "--", "gunicorn", "app.main:app", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "-w", "1", "--reload"]
